--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,9 @@ dependencies:
   provider: ^6.0.5
   flutter_acrylic: ^1.0.0+2
   fluent_ui: ^3.12.0
+  shared_preferences: ^2.0.15
+  http: ^0.13.5
+  image_picker: ^0.8.6
   # fluent_ui: ^4.0.3
 
 dev_dependencies:
